# md2imscp

./: .gitignore  AGENTS.md  README.md  SPEC.md  mkdocs.yml  pyproject.toml
docs/: codebase.md  index.md  input-format.md  testing.md
examples/: horizontal_rule_cloze_bank.md  horizontal_rule_matching_bank.md  horizontal_rule_multiple_choice_bank.md  horizontal_rule_single_choice_bank.md  horizontal_rule_true_false_bank.md  sample_assessment.md
md2imscp/: cli.py  core.py
md2imscp/resources/: imscp_v1p1.xsd
tests/: test_build.py
